--- a/Frontend/src/features/chats/components/SectionChats/AllChats/BlockDialogActive/WindowDialog/WindowDialog.module.scss
+++ b/Frontend/src/features/chats/components/SectionChats/AllChats/BlockDialogActive/WindowDialog/WindowDialog.module.scss
@@ -11,6 +11,8 @@
     border-right: 1px solid #1d1e24;
     border-bottom: 1px solid #1d1e24;
     > div:nth-child(2){
+      max-height: 530px;
+      overflow: auto;
       flex: 1 1 auto;
     }
   }
