--- a/Frontend/src/features/chats/components/SectionChats/AllChats/BlockDialogActive/WindowDialog/Header/Header.module.scss
+++ b/Frontend/src/features/chats/components/SectionChats/AllChats/BlockDialogActive/WindowDialog/Header/Header.module.scss
@@ -1,37 +1,62 @@
-.header{
+.header {
   display: flex;
   align-items: center;
-  background-color: black;
   padding: 0.6rem;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  border: 1px solid rgba(255, 0, 0, .5);
+  justify-content: space-between;
+  > div{
+    display: flex;
+  }
+  &.dark {
+    background-color: black;
+    border: none;
+  }
 }
 
-.img{
+.img {
   display: flex;
   align-items: center;
   margin-right: 1rem;
-  > img{
+
+  > img {
     max-height: 25px;
     max-width: 25px;
     border-radius: 50%;
   }
 }
 
-.title{
+.title {
   color: gray;
   margin-right: 0.4rem;
 }
 
-.button{
+.button {
   border-radius: 15px;
   margin-left: 4rem;
   margin-right: 1rem;
+  background-color: transparent;
+  border: 1px solid rgba(255, 0, 0, .5);
+  &.dark{
+    color: white;
+    border: 1px solid transparent;
+    background-color: #1a1a1a;
+  }
 }
 
-.icons{
+.icons {
   display: flex;
+  align-items: center;
   gap: 1rem;
+}
+
+.titleName {
+  color: black;
+
+  &.dark {
+    color: white;
+  }
 }
 
 
