--- a/Frontend/src/features/chats/components/SectionChats/AllChats/BlockMessages/DropDownMessages/DropDownMessagesBlock/DropDownMessagesItem/DropDownMessagesItem.module.scss
+++ b/Frontend/src/features/chats/components/SectionChats/AllChats/BlockMessages/DropDownMessages/DropDownMessagesBlock/DropDownMessagesItem/DropDownMessagesItem.module.scss
@@ -16,8 +16,16 @@
   }
 
   &:hover {
-    background-color: #1b1d24;
+    background-color: white;
+    opacity: 0.7;
   }
+
+  &.dark {
+    &:hover {
+      background-color: #1b1d24;
+    }
+  }
+
 }
 
 .titles {
@@ -25,9 +33,12 @@
   flex-direction: column;
 
   > h4 {
-    color: white;
+    color: black;
     font-weight: bold;
     margin-top: 0.4rem;
+    &.dark{
+      color: white;
+    }
   }
 
   > div {
