--- a/Frontend/src/features/chats/components/SideBarChats/SideBarChats.module.scss
+++ b/Frontend/src/features/chats/components/SideBarChats/SideBarChats.module.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: black;
+  background-color: white;
   border-bottom-left-radius: 15px;
+  &.dark{
+    background-color: var(--darkbg);
+  }
 }
