--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,10 +1,11 @@
 :root {
+  --darkbg:#1f232b;
+  --black:black;
+  --ligthbg:white;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
   padding: 0;
   margin: 0;
   font-synthesis: none;
@@ -32,7 +33,6 @@ input {
 }
 
 body {
-  background-color: #1f232b;
 }
 
 h1 {
@@ -47,7 +47,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
