--- a/Frontend/src/layouts/MainLayout.module.scss
+++ b/Frontend/src/layouts/MainLayout.module.scss
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  background-color: var(--ligthbg);
+  &.dark{
+    background-color: var(--darkbg);
+  }
 }
+
